--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "curl": "^0.1.4",
+    "express": "^4.17.3",
+    "ngrok": "^4.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
-    "web-vitals": "^2.1.4"
+    "wavefile": "^11.0.0",
+    "web-vitals": "^2.1.4",
+    "wget": "^0.0.1",
+    "ws": "^8.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
