--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ngrok": "^4.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "wavefile": "^11.0.0",
     "web-vitals": "^2.1.4",
